<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".LogInActivity">

    <!--    Header-->
    <RelativeLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toTopOf="@id/layout_login_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/moody_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/moodytxt_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="120dp"
                android:layout_marginRight="0dp"
                android:text="MOOdy"
                android:textColor="@color/black"
                android:textSize="50dp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:id="@+id/moodyimg_heading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:adjustViewBounds="true"
                android:maxWidth="160dp"
                android:maxHeight="80dp"
                app:srcCompat="@drawable/signup_login_cow"></ImageView>
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/layout_login_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/login_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <!--            Email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:hint="Email"
                android:textColorHint="@color/brown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/beige"
                    android:gravity="left"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/brown"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--            Password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="15dp"
                android:textColorHint="@color/brown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_email"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:hint="Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/beige"
                    android:gravity="left"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/brown"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button_login"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/button_background"
                android:elevation="2dp"
                android:text="Log in"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_password"
                app:layout_constraintWidth_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>