...

        </TextView>

    </RelativeLayout>

    <Button
        android:id="@+id/main_button_logIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
...
